# master-thesis-research-logs

./: .gitignore  .gitmodules
courses/architecture_1001_x86-64_assembly/: 1_introduction.md  2_computer_registers.md  3_the_stack.md  4_calling_functions.md  computer_registers.md  introduction.md  the_stack.md
courses/architecture_1001_x86-64_assembly/documents/: 10_multiply_and_divide.md  11_cisc_delight_repeatable_instructions.md  13_intel_and_at&t_syntax.md  3_the_stack.md  4_calling_functions.md  5_local_variable.md  6_function_parameter_passing.md  7_control_flow.md  8_boolean_logic.md  9_bit_shifting.md
courses/architecture_1001_x86-64_assembly/exercises/: .gitignore  ArrayLocalVariable.c  GotoExample.c  IfExample.c  Pass1Parameter.c  SingleLocalVariable  SingleLocalVariable.c  SpecialMaths.c  StructLocalVariable.c  TooManyParameter.c
courses/debuggers_1011_introduction_to_windbg/documents/: windbg_tutorial.md
courses/debuggers_1012_introduction_to_gdb/documents/: gdb_tutorial.md
courses/debuggers_1012_introduction_to_gdb/excersises/: echo.c  echo_bin  fibber.c  fibber_bin
courses/making_embedded_systems/documents/: note.md
courses/rust/documents/: rust_tutorial.md
daily-logs/: 09-10-2025-daily-logs.md  19-11-2025-daily-logs.md  2025-10-29-daily-logs.md  2025-10-30-daily-logs.md  2025-11-08-daily-logs.md  2025-11-16-daily-logs.md  2025-11-19-daily-logs.md  2025-11-23-daily-logs.md  2025-11-29-daily-logs.md  2025-12-01-daily-logs.md  2025-12-13-daily-logs.md  2025-12-24-daily-logs-nautilus.md  2025-5-16-daily-logs.md  2026-5-13-daily-logs.md  2026-5-14-daily-logs.md  2026-5-16-daily-logs.md  2026-5-20-daily-logs.md  2026-6-10-daily-logs.md  23-11-2025-daily-logs.md  30-10-2025-daily-logs.md  4-11-2025-daily-logs.md  courses.md  pdf-cve-research.md  pdf_syntax.md  projects.md
logs/: .gitignore  2025-12-25-log.md  2025-12-27-log.md  2026-1-12-to-18-log.md  2026-1-19-to-25-log.md  2026-1-26-to-2-log.md  2026-1-5-log.md  2026-2-3-to-9-log.md  addAnnotGrammer.py  builder.py  create_pdf_js.py  fuzz_js_output.txt  master-thesis-working-log.md  masterAcroJS.py  milestone.md  security-researcher-101.md
logs/2026-05-16-logs/: font-matrix-type-mismatch-grammar.py
meeting-minutes/: 04-11-2025-meeting-minutes.md  15-11-2025-meeting-minutes.md  2025-11-25-meeting-minutes.md  2025-12-09-meeting-minutes.md  2025-12-23-meeting-minutes.md  2025-12-30-meeting-minutes.md  2026-1-13-meeting-minutes.md  2026-5-13-meeting-minutes.md  2026-5-16-meeting-minutes.md  2026-5-30-meeting-minutes.md  2026-6-25-meeting-minutes.md  2026-6-4-meeting-minutes.md
research/: .gitignore  README.md  master-thesis.md  xpdf-cve-benchmark.md
research/baselines/afl-xpdf-4.06-run1/: .gitignore  README.md  fuzzer_stats
research/crashes/: README.md
research/crashes/confirmed/: README.md
research/crashes/false-positive/: README.md
research/crashes/untriaged/: README.md
research/docs/: cve-2020-35376-embedded-font-stream.md  xpdf-cve-benchmark.md
research/experiments/: .gitignore  launch_run4.sh  launch_run4_nf.sh
research/experiments/afl-xpdf-run1/: run.sh
research/experiments/afl-xpdf402-cff-run1/: README.md  gen_seeds.sh  run.sh
research/experiments/afl-xpdf402-cve35376-seed/: run.sh
research/experiments/afl-xpdf402-proto-run1/: README.md  run.sh
research/experiments/afl-xpdf402-type3cache-asan-run1/: README.md  run.sh
research/experiments/afl-xpdf402-type3cache-run1/: .gitignore  README.md  run.sh
research/experiments/libfuzzer-podofo-run1/: README.md  run.sh
research/experiments/libfuzzer-podofo-run2/: README.md  run.sh
research/experiments/libfuzzer-podofo-run3/: run.sh
research/experiments/libfuzzer-podofo-run4/: run.sh
research/experiments/libfuzzer-xpdf-run1/: README.md  run.sh
research/experiments/libfuzzer-xpdf-run2/: README.md  run.sh
research/experiments/libfuzzer-xpdf-run3/: run.sh
research/experiments/libfuzzer-xpdf-run4/: run.sh
research/experiments/libfuzzer-xpdf402-1h/: run.sh
research/experiments/libfuzzer-xpdf402-repro/: .gitignore
research/findings/podofo-alloc-size/: README.md  crash-input.txtpb
research/findings/xpdf402-acroform-scanfield-recursion/: README.md  crash.ps
research/findings/xpdf402-catalog-dtor-nullderef/: README.md
research/findings/xpdf402-cff-cvtglyph-stackoverflow/: README.md
research/harnesses/: README.md
research/pdf-proto-schema/: .gitignore  CMakeLists.txt  README.md  afl_harness_xpdf.cpp  cov_compare.sh  gen_corpus.cpp  harness.cpp  harness_podofo.cpp  pdf.pb.cc  pdf.pb.h  pdf.proto  serializer.cpp  serializer.h  verify_serializer.cpp
research/pdf_ir_test/: test_roundtrip.sh
research/repos/: README.md
research/schema/: README.md
research/schema/pdf-proto/: .gitignore  CMakeLists.txt  README.md  afl_mutator.cpp  cov_compare.sh  cov_driver.cpp  gen_corpus.cpp  harness.cpp  harness_splash.cpp  measure_valid_rate.cpp  pdf.proto  proto2pdf.cpp  serializer.cpp
research/schema/pdf-proto/afl/: afl_harness_xpdf.cpp  build_mutator.sh
research/schema/pdf-proto/coverage/: cov_compare.sh
research/schema/pdf-proto/modules/cff/: README.md  cff.proto  cff_serializer.h  verify_cff.cc
research/schema/pdf-proto/modules/cff/seeds/: gen_cve_2020_35376_seed.cpp
research/schema/pdf-proto/modules/cff/tools/: inspect_cff_seed.cpp
research/schema/pdf-proto/modules/type3cache/: README.md  type3_cache.proto  type3_cache_serializer.cc  type3_cache_serializer.h
research/schema/pdf-proto/modules/type3cache/seeds/: cve-2020-25725-pdfdoc.txtpb  cve-2020-25725.txtpb
research/schema/pdf-proto/modules/type3cache/tools/: check_type3cache_corpus.cpp  gen_type3cache_corpus.cpp  type3cache2pdf.cpp
research/schema/pdf-proto/tests/: verify_serializer.cpp
research/schema/pdf-proto/tools/: gen_corpus.cpp
research/seeds/: README.md
research/targets/: README.md
research/thesis/pdf-proto-schema/: .gitignore  CMakeLists.txt  README.md  build_mutator.sh  cff_serializer.cc  cff_serializer.h  check_serializer.cpp  serializer.cpp  serializer.h  verify_cff.cc  verify_serializer.cpp
templates/: daily.md
(+400 files in other folders)
